# airbnb-django-server

./: .gitignore  README.md  pyproject.toml
bookings/: serializers.py
categories/: serializers.py  views.py
config/: settings.py  urls.py
medias/: admin.py  serializers.py  urls.py  views.py
medias/migrations/: 0003_alter_photo_file_alter_video_file.py
reviews/: schemas.py  serializers.py
rooms/: models.py  serializers.py  urls.py
rooms/views/: __init__.py  amenities.py  rooms.py
users/: models.py  urls.py  views.py
users/migrations/: 0003_alter_user_avatar.py
wishlists/: serializers.py  views.py
